# myarm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
report/: report.md  requirements.md
report/lab3/: requirements.md
report/lab3-ik/: ik_solutions.csv  report.md  requirements.md
report/lab4/: report.md  requirements.md
report/lab4-the-matrix/: report.md
report/lab5-the-path/: report.md  requirements.md
scripts/: velocity_control.py  verify_cases.py
src/forward/: __init__.py  dh_params.py  ik_solver.py  main.py  numerical_checker.py  solver.py  verify_fk_coppelia.py
src/myarm/: coppelia_utils.py  dh_params.py  fk_solver.py  ik_solver.py  jacobian.py  main.py  numerical_checker.py  orientation.py  presets.py  trajectories.py  type_utils.py  velocity_control.py  verify_fk_coppelia.py  verify_ik_coppelia.py
src/myarm/adapters/: verify_fk_coppelia.py  verify_ik_coppelia.py
src/myarm/cli/: fk.py  ik.py  jacobian.py  utils.py  velocity.py  verify.py
src/myarm/control/: control_utils.py  velocity_control.py
src/myarm/core/: __init__.py  models.py  type_utils.py
src/myarm/model/: dh_params.py  jacobian.py  transforms.py
src/myarm/solvers/: fk_solver.py  ik_solver.py  numerical_checker.py  trajectories.py
stubs/: readme.md
stubs/coppeliasim_zmqremoteapi_client/: __init__.pyi
type_stubs/: readme.md
type_stubs/coppeliasim_zmqremoteapi_client/: __init__.pyi
typings/: readme.md
typings/coppeliasim_zmqremoteapi_client/: __init__.pyi
