[project]
name = "myarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ks", email = "2777389616@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "coppeliasim-zmqremoteapi-client>=2.0.4",
    "numpy>=2.3.4",
    "sympy>=1.14.0",
]

[project.scripts]
myarm = "myarm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "microsoft-python-type-stubs",
    "mypy>=1.18.2",
    "pyright>=1.1.407",
    "vulture>=2.14",
]

[tool.mypy]
mypy_path = ["typings"]
warn_unused_ignores = false

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
